# tiny_nmea

./: CMakeLists.txt  README.md
inc/tiny_nmea/: nmea_0183_type_names.h  sats_tracking.h  tiny_nmea.h
inc/tiny_nmea/internal/: config.h  data_formats.h  fixed_point.h  nmea_0183_defs.h  nmea_0183_types.h  parse_sentence_fields.h  ringbuf.h  ringbuf_type.h  sats_tracking_handler.h  sats_tracking_types.h  sentences.h  util.h
src/: data_formats.c  fixed_point.c  nmea_0183_parse_fields.c  nmea_0183_type_names.c  parse_sentence_fields.c  ringbuf.c  sats_tracking.c  sats_tracking_handler.c  sentences.c  tiny_nmea.c  tiny_nmea_parse.c  tiny_nmea_work.c
tests/: CMakeLists.txt  test.h  test_corrupted_uart.c  test_field_parsing.c  test_file_recordings.c  test_ringbuf.c  test_sentences.c  test_system.c
