add_executable(test_ringbuf test_ringbuf.c)
add_executable(test_field_parsing test_field_parsing.c)
add_executable(test_sentences test_sentences.c)
add_executable(test_system test_system.c)
add_executable(test_corrupted_uart test_corrupted_uart.c)
add_executable(test_file_recordings test_file_recordings.c)

target_link_libraries(test_ringbuf PRIVATE tiny_nmea::tiny_nmea)
target_link_libraries(test_field_parsing PRIVATE tiny_nmea::tiny_nmea)
target_link_libraries(test_sentences PRIVATE tiny_nmea::tiny_nmea)
target_link_libraries(test_system PRIVATE tiny_nmea::tiny_nmea)
target_link_libraries(test_corrupted_uart PRIVATE tiny_nmea::tiny_nmea)
target_link_libraries(test_file_recordings PRIVATE tiny_nmea::tiny_nmea)

add_test(NAME tiny_nmea_test_ringbuf COMMAND test_ringbuf)
add_test(NAME tiny_nmea_test_field_parsing COMMAND test_field_parsing)
add_test(NAME tiny_nmea_test_sentences COMMAND test_sentences)
add_test(NAME tiny_nmea_test_system COMMAND test_system)
add_test(NAME tiny_nmea_test_corrupted_uart COMMAND test_corrupted_uart)
add_test(NAME tiny_nmea_test_file_recordings COMMAND test_file_recordings)
